# nctalk-client

./: MANIFEST.in  README.md  setup.cfg
nctalk_client/: __init__.py  app.py  config.py  constants.py  icons.py  images.py  login.py  logs.py  menu.py  preferences.py  rooms.py  task_manager.py
nctalk_client/assets/ui/: app.ui  login.ui  preferences.ui  room_tab.ui
