[metadata]
name = nctalk-client
version = 0.0.1
description = Desktop Client for Nextcloud Talk
long_description = file: README.md
url: https://github.com/toxick/nctalk-client
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: Flake8
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.10

[options]
packages = find:
include_package_data = True
test_suite = tests/

install_requires =
    nextcloud_async
    pillow
    httpx
    platformdirs

[options.extras_require]
test = mock

[options.packages.find]
exclude =
    tests
    dist
    build

[options.entry_points]
console_scripts =
    nctalk = nctalk_client:run

[pycodestyle]
max-line-length = 95

[flake8]
exclude = .svn,CVS,.bzr,.hg,.git,__pycache__,.tox,.eggs,*.egg,node_modules,*venv*
max-line-length = 95
count = true
showpep8 = false
show-source = false
statistics = true

[pydocstyle]
ignore = D107,D203,D213,D105
